# ecom_api

./: .env.example  .gitignore  README.md  alembic.ini  main.py  main.py.mock  pyproject.toml  read_pyproject.py  seeding_data.json  technical_properties.json  tz_test.py
app/api/: __init__.py
app/api/v1/endpoints/: __init__.py  (+1 more)
app/enums/: enums.py
app/models/: __init__.py  models.py
app/serializers/: __init__.py  product_serializers.py
app/services/: product_services.py
enums/: enums.py
exceptions/: exceptions.py
faslava/auth/jwt/: models.py  utils.py
faslava/config/: configuration.py  database_manager.py
faslava/core/: dependencies.py  filters.py  messages.py  utils.py
faslava/enums/: enums.py
faslava/exceptions/: exceptions.py
faslava/logging/: __init__.py  logging_manager.py
faslava/middlewares/: base_middleware.py  exceptions_middleware.py  logging_middleware.py  middleware_manager.py
faslava/models/: base_models.py
faslava/serializers/: api_serializers.py  serializers.py
faslava/services/: base_services.py
migrations/: env.py
migrations/versions/: 1736020271_22a2fa1c1b6e_first_revision.py  1736022261_e5d72af0a514_add_metadata_dates_to_base_model.py  1736023436_19f7e763ab94_seeding.py  1736195423_6d7d13d0ba3d_add_metadata_dates_to_base_model.py  1736195739_36ab98c2fed6_seeding.py  1736711154_2c890a8cddbf_first_migration.py  1736711202_aeaf63e90880_seeding.py  668f6f3a880b_link_product_with_technical_properties.py  742476952c37_first_revision.py  a05d3234e88b_seeding.py  b4c15332a049_first_revision.py  f0d170b4acd7_first_revision.py
